--- a/index3.html
+++ b/index3.html
@@ -4,23 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Linara Salikhova</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./test.css">
     </head>
 
     <body>
         <header>
             <img src="./pics/logo_linara.svg" id="main-logo">
-            <a href="#about" class="non-mobile">About</a>
-            <a href="#expertise" class="non-mobile">Experience</a>
-            <a href="#contacts">Contact me <img src="./pics/arrow-ne.svg" class="responsive-img"></a>
+            <a href="#contacts">Contact me <img src="./pics/arrow-ne.svg"></a>
         </header>
 
         <div class="welcome">
-            <img src="./pics/BarcelonaAir.jpg" id="welcome-img">
-            <h1>
-                <div class="first-left">Welcome to</div> 
-                <div class="second-right">Linara’s page</div>
-            </h1>
+            <img src="./pics/BarcelonaAir.jpg">
+            <h1>Welcome to Linara’s page</h1>
             <p>This site is the storytelling of my route<br>from an architecture student to a city<br>researcher from 2017 to the present.</p>
             <a href="#about"><img src="./pics/arrow-down.svg" id="down-btn"></a>
         </div>
@@ -30,7 +25,7 @@
                 <h2>About</h2>
             </div>
             <div>
-                <h3>I am Linara, researcher and<br>urban planner.</h3>
+                <h3>I am Linara, researcher<br> and urban planner.</h3>
                 <p>I am an urban planner, a researcher and a data analyst. I am a perfectionist who always tries to get to the core of a matter. I investigate cities from microclimate to housing to reveal the opportunities and propose a better future.</p>
                 <img src="./pics/SalikhovaLinara.jpeg">
             </div>
@@ -113,16 +108,16 @@
                 <a href="#languages" class="accordion-trigger" id="toggleLink4">Languages<img src="./pics/plus-small.svg" id="plusIcon4"><img src="./pics/cross-small.svg" id="xIcon4" style="display: none;"></a>
                 <div class="accordion-content" id="languages">
                     <div class="two-column-layout">
-                        <p class="column info2-column">Russian</p>
-                        <p class="column end-line-desc">Native</p>
+                        <p class="column info-column">Russian</p>
+                        <p class="column info2-column">Native</p>
                     </div>
                     <div class="two-column-layout">
-                        <p class="column info2-column">English</p>
-                        <p class="column end-line-desc">Advanced</p>
+                        <p class="column info-column">English</p>
+                        <p class="column info2-column">Advanced</p>
                     </div>
                     <div class="two-column-layout">
-                        <p class="column info2-column">Spanish</p>
-                        <p class="column end-line-desc">Intermediate</p>
+                        <p class="column info-column">Spanish</p>
+                        <p class="column info2-column">Intermediate</p>
                     </div>
                 </div>
             </div>
@@ -318,8 +313,8 @@
                 <p><a href="mailto:linarasalikhova@gmail.com">linarasalikhova@gmail.com</a><br><a href="https://t.me/lnrslkhv">@lnrslkhv</a><br><a href="tel.:+79177824904">+7(917)782-49-04</a><br><a href="tel.:+5491171276916">+5491171276916</a><br><br></p>
             </div>
             <div class="socialLinks">
-                <a href="https://instagram.com/lnrslkhv" target="_blank" id="insta"><img src="./icons8-instagram-240.svg"></a>
-                <a href="https://www.linkedin.com/in/linara-salikhova/" target="_blank" id="linkedin"><img src="./icons8-linkedin-240.svg"></a>
+                <a href="https://instagram.com/lnrslkhv" target="_blank" id="insta"><img src="./instagram.svg"></a>
+                <a href="https://www.linkedin.com/in/linara-salikhova/" target="_blank" id="linkedin"><img src="./linkedin.svg"></a>
             </div>
         </div>
 
