--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 </div>    
             </section>
             <div class="projects-closing-text">
-                <p><span class="first-line-end">At the moment I am studuing web map development and working on</span> <span class="second-line-end">a couple of research projects in Yerevan.<span class="red-ps">Always learning.</span></span></p>
+                <p><span class="first-line-end">At the moment I am working on</span> <span class="second-line-end">a couple of research projects in Yerevan.<span class="red-ps"> Always learning.</span></span></p>
             </div> 
         </div>
 
@@ -341,8 +341,8 @@
                             </ul>    
                         </div>
                         <div class="svg-links">
-                            <a href="https://t.me/lnrslkhv"><img src="./resources/pics/386727_telegram_icon.svg" id="telegram"></a>
-                            <a href=""><img src="./resources/pics/icons8-linkedin-240.svg"></a>
+                            <a href="https://t.me/lnrslkhv" target="_blank"><img src="./resources/pics/386727_telegram_icon.svg" id="telegram"></a>
+                            <a href="https://www.linkedin.com/in/linara-salikhova/" target="_blank"><img src="./resources/pics/icons8-linkedin-240.svg" id="linkedin-icon"></a>
                         </div>
                     </div>
                 </div>
