--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <title>Linara Salikhova</title>
         <link type="text/css" rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
         <link rel="stylesheet" href="./style.css">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XLTRBG3MT"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-1XLTRBG3MT');
+        </script>
     </head>
 
     <body>
